--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
 	"main": "index.js",
 	"dependencies": {
 		"express": "3.4.8",
-		"socket-io": "1.3.7"
+		"socket.io": "1.3.7"
 	},
 	"private": true,
 	"readme": "README.md"
